# lmoments3

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.rst  CHANGELOG.txt  MANIFEST.in  README.rst  environment.yml  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: main.yml  publish-pypi.yml  tag-testpypi.yml
CI/: requirements_ci.in  requirements_ci.txt
conda-recipe/: meta.yaml
docs/source/: api.rst  conf.py  distributions.rst  index.rst  usage.rst
lmoments3/: __init__.py  _version.py  distr.py  stats.py
lmoments3/tests/: __init__.py  test_lmoments.py  test_samlmu_speed.py
src/lmoments3/: __init__.py  distr.py  stats.py
src/lmoments3/tests/: __init__.py  test_samlmu_speed.py
