[build-system]
requires = ["setuptools", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "lmoments3"
description = "A library extend scipy with L-moments to calculate optimal parameters for a number of distributions"
authors = [
  {name = "Florenz A.P. Hollebrandse", email = "f.a.p.hollebrandse@protonmail.ch"}
]
maintainers = [
  {name = "Trevor James Smith", email = "smith.trevorj@ouranos.ca"},
  {name = "Pascal Bourgault", email = "bourgault.pascal@ouranos.ca"}
]
readme = {file = "README.rst", content-type = "text/x-rst"}
requires-python = ">=3.8.0"
keywords = [
  "distributions",
  "fitting",
  "l-moments",
  "linear-moments",
  "lmoments",
  "lmoments3",
  "scipy",
  "statistics"
]
license = {file = "LICENSE"}
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Mathematics"
]
dynamic = ["version"]
dependencies = [
  "numpy",
  "scipy"
]

[project.optional-dependencies]
dev = [
  "black >=24.8.0",
  "blackdoc >=0.3.9",
  "build >=1.0",
  "flake8 >=7.0.0",
  "pydocstyle >=6.3.0",
  "sphinx >=6.0.0",
  "sphinx-rtd-theme >=1.0",
  "wheel >=0.42.0"
]

[project.urls]
"Homepage" = "https://lmoments3.readthedocs.io/en"
"Source" = "https://github.com/Ouranosinc/lmoments3/"
"Changelog" = "https://github.com/Ouranosinc/lmoments3/blob/main/CHANGELOG.rst"
"Issue tracker" = "https://github.com/Ouranosinc/lmoments3/issues"
"About Ouranos" = "https://ouranos.ca/en/"

[tool]

[tool.black]
target-version = [
  "py38",
  "py39",
  "py310",
  "py311",
  "py312",
  "py313"
]

[tool.coverage.run]
source = "lmoments3"
relative_files = true
omit = ["*/tests/*.py"]

[tool.flit.sdist]
include = [
  "CHANGELOG.rst",
  "LICENSE",
  "README.rst",
  "docs/make.bat",
  "docs/Makefile",
  "docs/source/**"
]
exclude = [".*", "conda-recipe/**", "docs/build/**"]

[tool.ruff]
src = ["lmoments3"]
line-length = 150
exclude = [
  ".eggs",
  ".git",
  "build",
  "docs"
]

[tool.ruff.lint]
extend-select = [
  "RUF022" # unsorted-dunder-all
]
ignore = [
  "COM", # commas
  "D205", # blank-line-after-summary
  "D400", # ends-in-period
  "D401", # non-imperative-mood
  "N806", # variable-name
  # FIXME: the following should be addressed in a future PR
  "PERF401" # manual-list-comprehension
]
preview = true
select = [
  "B", # bugbear
  "BLE", # blind-except
  "C90", # mccabe-complexity
  "D", # docstrings
  "E", # pycodestyle errors
  "FLY002", # static-join-to-fstring
  "G", # logging-format
  "I", # import-order
  "N", # naming conventions
  "PERF", # iterator performance
  "PTH", # pathlib
  "RUF010", # explicit-f-string-type-conversion
  "RUF013", # implicit-optional
  "S", # bandit
  "UP", # python version conventions
  "W" # pycodestyle warnings
]

[tool.ruff.lint.flake8-bandit]
check-typed-exception = true

[tool.ruff.lint.isort]
known-first-party = ["lmoments3"]
case-sensitive = true
detect-same-package = false
lines-after-imports = 2
no-lines-before = ["future", "standard-library"]

[tool.ruff.lint.mccabe]
max-complexity = 20

[tool.ruff.lint.per-file-ignores]
"docs/**" = ["E402"]
"src/lmoments3/**/__init__.py" = ["F401", "F403"]
"src/lmoments3/tests/**" = ["D100", "D101", "D102", "D103", "S101"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 180

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.setuptools_scm]
